--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Ryan Bolick</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ryan Bolick - Interaction Designer">
-    <meta property="og:image" content="assets/img/preview.png">
+    <meta name="image" property="og:image" content="https://ryanbolick.com/assets/img/preview.png">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme-event.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="preload" as="font" href="assets/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
