--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -171,7 +171,7 @@
 
 
         <div class="row px-2 mt-2">
-            <h5><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence.</h5>
+            <h5><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence. It suggests meals you'll love - not menus.</h5>
             <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
             <!-- <p><span class="low">Chrome on web is recommended. Safari will catch up eventually.</p> -->
 
