Add WCAG 2.1 to skills

--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                     </div>
                       <div class="col-auto">
                         <div>
-                          <span class="text-primary-2">HTML5/CSS, JavaScript, Git / GitHub</span>
+                          <span class="text-primary-2">HTML5/CSS, JavaScript, Git/GitHub</span>
                         </div>
                       </div>
                 </div>
@@ -162,7 +162,7 @@
                   </div>
                   <div class="col-auto">
                     <div>
-                      <span class="text-info">Apple HIG, Google Material, People + AI, SAS Beautiful Reports</span>
+                      <span class="text-info">Apple HIG, Google Material, People + AI, SAS Beautiful Reports, WCAG 2.1</span>
                     </div>
                   </div>
                 </div>
@@ -175,7 +175,7 @@
                   </div>
                   <div class="col-md-auto">
                     <div>
-                      <span class="text-success">Tableau, Power BI, Excel</span>
+                      <span class="text-success">Tableau, Power BI, Excel, SAS</span>
                     </div>
                   </div>
                 </div>
@@ -188,7 +188,7 @@
                   </div>
                   <div class="col-auto">
                     <div>
-                      <span class="text-primary-3">Accessibility, User research, hi-fi prototyping</span>
+                      <span class="text-primary-2">Accessibility, User research, hi-fi prototyping</span>
                     </div>
                   </div>
                 </div>
@@ -265,7 +265,7 @@
           <h2>Highlights</h2>
       </div>
       <div>
-        <h6 class="mb-1">Led two successful 510(k) submissions</h6>
+        <h6 class="mb-1">Led two cleared 510(k) submissions</h6>
         <h6 class="mb-1">2nd place at i4 design competition <span style="color:grey">($15,500 award)</span></h6>
         <h6 class="mb-1">Franklin L. Bost Fellow <span style="color:grey">(Graduate funded fellowship)</span></h6>
         <h6 class="mb-1">Goodnight Scholar <span style="color:grey">(Undergraduate full-ride scholarship)</span></h6>
