--- a/nutrics.html
+++ b/nutrics.html
@@ -100,7 +100,7 @@
 
 
     <div class="navbar-container">
-      <nav class="navbar navbar-expand-lg justify-content-between navbar-light border-bottom-0 pl-1" style="background-color:#f7f7f7; opacity:0.9;" data-sticky="top">
+      <nav class="navbar navbar-expand-lg justify-content-between navbar-light border-bottom-0 pl-1" style="background-color:#f7f7f7; opacity:0.9;" >
         <div class="container">
           <div class="col-5 px-0 d-flex justify-content-between">
               <a href="/" aria-expanded="false" aria-haspopup="true" class="nav-link" style="color:#0063b3">Ryan Bolick</a>
