Remove blog links

--- a/transloc.html
+++ b/transloc.html
@@ -361,7 +361,7 @@ font-size: 3rem;
 
                     <div class="row text-center mt-6 pl-3 pr-3">
                     <p class="lead mt-3" style="font-style:italic">
-                      A case study documenting my process will be published soon <a href="blog" target="_blank">on my blog.</a></span>
+                      A case study documenting my process will be published soon.
                     </p>
                   </div>
 
