Wording changes and updates to roles

--- a/shyft.html
+++ b/shyft.html
@@ -251,12 +251,20 @@ font-size: 3rem;
 
                 </div>
 
-
                 <div class="row pt-1 pl-2 pr-3">
                     <div class="col-auto">
                         <h4>The Brief</h4>
                         <p class="main">
                             Transportation is one of the senior community's biggest issues. Many cannot drive, but still desire and need to reach their communities. Seniors know about ridesharing solutions, but struggle navigating current user interfaces. The task: design a ridesharing app with accessibility at the forefront.
+                        </p>
+                      </div>
+                  </div>
+
+                <div class="row pt-1 pl-2 pr-3">
+                    <div class="col-auto">
+                        <h4>My Role - Explained</h4>
+                        <p class="main">
+                            I worked closely with several senior groups to determine areas of unmet needs. Once determining transportation was a large issue, I created many visual designs and mockups in Adobe XD. The senior groups tested these designs over several rounds, which led to a more refined UI. I did not develop a backend for this app, but used existing platforms as a barometer for feasibility.
                         </p>
                       </div>
                   </div>
