--- a/transloc.html
+++ b/transloc.html
@@ -266,11 +266,17 @@ font-size: 3rem;
                         <p class="main">
                             TranLoc Rider is a public transit app popular in cities and college campuses. It maps bus routes and tracks bus location, giving users more control over their public transportation experience. Through interviews and a survery, several of its features were found to be difficult to use and confusing. This project explored how applying principles of universal design and accessibility could enhance the user experience of TransLoc Rider.
                         </p>
-                        <p class="main">
-                            This was a group project with 3 other graduate students at NC State. I designed the user interface for the onboarding process and was responsible for creating mid- and high-fidelity prototypes of the app's main functions.
-                        </p>
                       </div>
                   </div>
+
+                  <div class="row pt-1 pl-2 pr-3">
+                      <div class="col-auto">
+                          <h4>My Role - Explained</h4>
+                          <p class="main">
+                              This was a group project with 3 other graduate students at NC State. I designed the user interface for the onboarding process and was responsible for creating mid- and high-fidelity prototypes of the app's main functions in Adobe XD.
+                          </p>
+                        </div>
+                    </div>
 
 
                 <div class="row mt-7 pt-2 pl-2 pr-3">
