--- a/nutrics.html
+++ b/nutrics.html
@@ -147,7 +147,8 @@
             <div class="hi2" style="line-height:1">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
             <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
             <h5 class="pt-1"><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence. It suggests meals you'll love - not menus.</h5>
-            <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
+            <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. I created the visual design, built live mockups in Adobe XD for user testing, and contributed to the feature engineering process which informs the predictive models.</h5>
+            <h5 class="pt-1"><span class="low">This demo demonstrates the UI, look for the full version on your app store soon!</h5>
 
         </div>
 
