--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@
       </div>
     <div>
       <h5 class="mb-0 mt-1" style="color:#0066b3"><a href="https://www.hcltechsw.com/" target="blank" style="color:#0066b3">HCL Software</a></h5>
-      <h6 class="mb-0">Senior Software Engineer <span class="h6" style="color:grey">2020- </span></h6>
+      <h6 class="mb-0">Senior UX Designer <span class="h6" style="color:grey">2020- </span></h6>
     </div>
       <div>
         <h5 class="mb-0 mt-2"><span style="color:#012169"><a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Duke</a></span> & <span style="color:#CC0000"><a href="https://academics.design.ncsu.edu/departments/academics/industrial-design/#graduate" target="blank" style="color:#CC0000">NC State</a></span></h5>
