--- a/about.html
+++ b/about.html
@@ -104,9 +104,12 @@
                   <h1 class="hi">About Me</h1>
                 </div>
                 <p class="lead mt-2">
-                  I'm an <b class="impact">engineer</b> and <b class="impact">designer</b> with a passion for <b class="impact">research driven</b> innovation and <b class="impact">user-centric</b> implementation. Currently, I'm improving the tools that keep businesses running at <b><a href="https://www.hcltechsw.com/" target="blank" class="impact">HCL Software</a></b>.</p>
+                  I'm an <b class="impact">engineer</b> and <b class="impact">designer</b> with a passion for <b class="impact">research driven</b> innovation and <b class="impact">user-centric</b> implementation. Currently, I'm improving the tools that keep businesses running as a Senior UX Designer at HCL Software.</p>
                 <p class="lead mt-3">
-                  I've designed FDA cleared surgical instruments, apps, enterprise software, and more. This breadth of experience has taught me to <b class="impact">ask questions</b>. Questions - not answers - have led to some of the best designs I've been a part of.</p>
+                  I've created design systems, designed FDA cleared surgical instruments, apps, enterprise software, and more. This breadth of experience has taught me to <b class="impact">ask questions</b>. Questions - not answers - have led to some of the best designs I've been a part of.</p>
+                <p class="lead mb-0"></p>
+                <p class="lead mt-3">
+                  Trail running, cycling, and crazy adventures keep my mind and body sharp when not designing (although sometimes these intersect with my <a href="mindfulrunning" class="impact" target=blank>designs</a>).</p>
                 <p class="lead mb-0"></p>
               </div>
             </div>
@@ -122,55 +125,55 @@
     </section>
 
     <section class="containernarrow px-2">
-        <div class="row col-6">
+        <div class="row col-6 mb-1">
             <h2>Skills</h2>
           </div>
 
 
-            <div class="row rounded bg-white border p-3 text-monospace shadow-sm col-12 mx-auto">
-                    <div class="row">
-                      <div class="col-md-auto">
+            <div class="row rounded bg-white border p-4 text-monospace shadow col-12 mx-auto">
+                    <div class="row mb-3">
+                      <div class="col-12 mb-2">
                         <div>
-                          <span>Design Tools:</span>
+                          <span>🎨 Design Tools</span>
                         </div>
                       </div>
                       <div class="col-auto">
                         <div>
-                          <span class="text-primary">Sketch, XD, InVision, Illustrator, Photoshop</span>
+                          <span class="text-primary">Sketch, Figma, XD, InVision, Illustrator, Photoshop</span>
                         </div>
                     </div>
                   </div>
 
-                <div class="row mt-1">
-                  <div class="col-md-auto">
+                <div class="row mb-3">
+                  <div class="col-12 mb-2">
                       <div>
-                        <span>Development:</span>
+                        <span>‍💻 Development</span>
                       </div>
                     </div>
                       <div class="col-auto">
                         <div>
-                          <span class="text-primary-2">HTML5/CSS, JavaScript, Git/GitHub</span>
+                          <span class="text-primary-2">HTML5/CSS, JavaScript, React, Android Studio (Kotlin), Xcode (Swift), Git/GitHub</span>
                         </div>
                       </div>
                 </div>
 
-                <div class="row mt-1">
-                  <div class="col-md-auto">
+                <div class="row mb-3">
+                  <div class="col-12 mb-2">
                     <div>
-                      <span>Guidelines:</span>
+                      <span>📖 Guidelines</span>
                     </div>
                   </div>
                   <div class="col-auto">
                     <div>
-                      <span class="text-info">Apple HIG, Google Material, People + AI, SAS Beautiful Reports, WCAG 2.1</span>
+                      <span class="text-info">Apple HIG, Google Material, Microsoft Fluent, IBM Carbon, Atlassian, SAS People + AI, SAS Beautiful Reports, WCAG 2.1</span>
                     </div>
                   </div>
                 </div>
 
-                <div class="row mt-1">
-                  <div class="col-md-auto">
+                <div class="row mb-3">
+                  <div class="col-12 mb-2">
                     <div>
-                      <span>Data Analysis:</span>
+                      <span>📊 Data Analysis</span>
                     </div>
                   </div>
                   <div class="col-md-auto">
@@ -180,23 +183,23 @@
                   </div>
                 </div>
 
-                <div class="row mt-1">
-                  <div class="col-md-auto">
+                <div class="row mb-3">
+                  <div class="col-12 mb-2">
                     <div>
-                      <span>Process:
+                      <span>🚧 Process</span>
                     </div>
                   </div>
                   <div class="col-auto">
                     <div>
-                      <span class="text-primary-2">Accessibility, User research, hi-fi prototyping</span>
+                      <span class="text-primary-2">Accessibility, User research, hi-fi / lo-fi prototyping, capability analysis</span>
                     </div>
                   </div>
                 </div>
 
-                <div class="row mt-1">
-                  <div class="col-md-auto">
+                <div class="row">
+                  <div class="col-12 mb-2">
                     <div>
-                      <span>What's left:</span>
+                      <span>🧮 What's left</span>
                     </div>
                   </div>
                   <div class="col-auto">
@@ -210,138 +213,158 @@
 
 
 <section class="containernarrow px-2">
-      <div class="row col-6">
-          <h2>Experience</h2>
+      <div class="row col-6 mb-1">
+          <h2 class="mr-3">Experience</h2>
+          <div >
+          <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-outline-primary">
+              <span>View Resume</span>
+            </a>
+          </div>
       </div>
-    <div>
-      <h5 class="mb-0 mt-1" style="color:#0066b3"><a href="https://www.hcltechsw.com/" target="blank" style="color:#0066b3">HCL Software</a></h5>
-      <h6 class="mb-0">Senior UX Designer <span class="h6" style="color:grey">2020- </span></h6>
-    </div>
-      <div>
-        <h5 class="mb-0 mt-2"><span style="color:#012169"><a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Duke</a></span> & <span style="color:#CC0000"><a href="https://academics.design.ncsu.edu/departments/academics/industrial-design/#graduate" target="blank" style="color:#CC0000">NC State</a></span></h5>
-        <h6 class="mb-0">Thesis (AI powered meal suggestions) <span class="h6" style="color:grey">2019 - 2020</span></h6>
-      </div>
-      <div>
-        <h5 class="mb-0 mt-2" style="color:#0066b3"><a href="https://mindspire.com/" target="blank" style="color:#0066b3">Mindspire Test Prep</a></h5>
-        <h6 class="mb-0">UX Designer / Data Analyst <span class="h6" style="color:grey">2019</span></h6>
-      </div>
-      <div>
-        <h5 class="mb-0 mt-2"><a href="https://yukonmedical.com/" target="blank" style="color:#69b6ae">Yukon Medical</a></h5>
-        <h6 class="mb-0">Design Consultant <span class="h6" style="color:grey">2018 - 2019</span></h6>
-      </div>
-      <div>
-        <h5 class="mb-0 mt-2" style="color:#d72946"><a href="https://www.cookmedical.com/endoscopy/" target="blank" style="color:#d72946">Cook Medical</a></h5>
-        <h6 class="mb-0">R&D Engineer <span class="h6" style="color:grey">2016 - 2017</span></h6>
-      </div>
-      <div>
-        <h5 class="mb-0 mt-2"><span style="color:#e21f21"><a href="https://www.wakemed.org/" target="blank" style="color:#e21f21">WakeMed</a></span>, <span style="color:#012169"><a href="https://www.dukehealth.org/hospitals/duke-university-hospital" target="blank" style="color:#012169">Duke</a></span>, & <span style="color:#CC0000"><a href="https://projects.ncsu.edu/project/bmeundergrad/" target="blank" style="color:#CC0000">NC State</a></span></h5>
-        <h6 class="mb-0">Senior Capstone (Wound Irrigator) <span class="h6" style="color:grey">2015 - 2016</span></h6>
-      </div>
-      <div>
-        <h5 class="mb-0 mt-2" style="color:#4B9CD3"><a href="https://daytonlab.sites.unc.edu/" target="blank" style="color:#4B9CD3">UNC (Dayton Lab)</a></span></h5>
-        <h6 class="mb-0">Research Engineer <span class="h6" style="color:grey">2015 - 2016</span></h6>
-      </div>
-      <div>
-        <h5 class="mb-0 mt-2" style="color:#02225a"><a href="https://www.teleflex.com/usa/en/product-areas/interventional/" target="blank" style="color:#02225a">Teleflex</a></span></h5>
-        <h6 class="mb-0">R&D Engineering Intern <span class="h6" style="color:grey">2014 - 2015</span></h6>
+
+      <div class="row rounded bg-white border px-3 py-4 shadow col-12 mx-auto">
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1" style="color:#0066b3"><a href="https://www.hcltechsw.com/" target="blank" style="color:#0066b3">HCL Software</a></h5>
+          <h6 class="mb-0">Senior UX Designer <span class="h6" style="color:grey">2020- </span></h6>
+        </div>
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1"><span style="color:#012169"><a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Duke</a></span> & <span style="color:#CC0000"><a href="https://academics.design.ncsu.edu/departments/academics/industrial-design/#graduate" target="blank" style="color:#CC0000">NC State</a></span></h5>
+          <h6 class="mb-0">Thesis (AI powered meal suggestions) <span class="h6" style="color:grey">2019 - 2020</span></h6>
+        </div>
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1" style="color:#0066b3"><a href="https://mindspire.com/" target="blank" style="color:#0066b3">Mindspire Test Prep</a></h5>
+          <h6 class="mb-0">UX Designer / Data Analyst <span class="h6" style="color:grey">2019</span></h6>
+        </div>
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1"><a href="https://yukonmedical.com/" target="blank" style="color:#69b6ae">Yukon Medical</a></h5>
+          <h6 class="mb-0">Design Consultant <span class="h6" style="color:grey">2018 - 2019</span></h6>
+        </div>
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1" style="color:#d72946"><a href="https://www.cookmedical.com/endoscopy/" target="blank" style="color:#d72946">Cook Medical</a></h5>
+          <h6 class="mb-0">R&D Engineer <span class="h6" style="color:grey">2016 - 2017</span></h6>
+        </div>
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1"><span style="color:#e21f21"><a href="https://www.wakemed.org/" target="blank" style="color:#e21f21">WakeMed</a></span>, <span style="color:#012169"><a href="https://www.dukehealth.org/hospitals/duke-university-hospital" target="blank" style="color:#012169">Duke</a></span>, & <span style="color:#CC0000"><a href="https://projects.ncsu.edu/project/bmeundergrad/" target="blank" style="color:#CC0000">NC State</a></span></h5>
+          <h6 class="mb-0">Senior Capstone (Wound Irrigator) <span class="h6" style="color:grey">2015 - 2016</span></h6>
+        </div>
+
+        <div class="col-12 mb-3">
+          <h5 class="mb-1" style="color:#4B9CD3"><a href="https://daytonlab.sites.unc.edu/" target="blank" style="color:#4B9CD3">UNC (Dayton Lab)</a></span></h5>
+          <h6 class="mb-0">Research Engineer <span class="h6" style="color:grey">2015 - 2016</span></h6>
+        </div>
+
+        <div class="col-12">
+          <h5 class="mb-1" style="color:#02225a"><a href="https://www.teleflex.com/usa/en/product-areas/interventional/" target="blank" style="color:#02225a">Teleflex</a></span></h5>
+          <h6 class="mb-0">R&D Engineering Intern <span class="h6" style="color:grey">2014 - 2015</span></h6>
+        </div>
       </div>
 </section>
 
+
+
 <section class="containernarrow px-2">
-      <div class="row col-6">
+
+    <div class="row col-6 mb-1">
           <h2>Education</h2>
       </div>
+
+    <div class="row rounded bg-white border p-4 shadow col-12 mx-auto">
     <div>
-      <h5 class="mb-0 mt-1" style="color:#cc0000"><a href="https://www.ncsu.edu/" target="blank" style="color:#cc0000">NC State</a></h5>
-      <h6 class="mb-0">MS Industrial Design <span class="h6" style="color:grey">2017 - 2020</span></h6>
-      <h6 class="mb-0">BS Biomedical Engineering <span class="h6" style="color:grey">2012 - 2016</span></h6>
+      <h5 class="mb-2" style="color:#cc0000"><a href="https://www.ncsu.edu/" target="blank" style="color:#cc0000">North Carolina State University &nbsp🐺</a></h5>
+      <h6 class="mb-1">MS Industrial Design <span class="h6" style="color:grey">2017 - 2020</span></h6>
+      <h6 style="color:grey">Franklin L. Bost Fellow</h6>
+      <h6 class="mb-1">BS Biomedical Engineering <span class="h6" style="color:grey">2012 - 2016</span></h6>
+      <h6 class="mb-0" style="color:grey">Goodnight Scholar</h6>
+      <h6 class="mb-0" style="color:grey">summa cum laude</h6>
+    </div>
     </div>
 </section>
+
+
 
 <!-- notable achievements -->
 
 <section class="containernarrow px-2">
-      <div class="row col-6">
+      <div class="row col-6 mb-1">
           <h2>Highlights</h2>
       </div>
+    <div class="row rounded bg-white border px-3 py-4 shadow col-12 mx-auto">
       <div>
-        <h6 class="mb-1">Led two cleared 510(k) submissions</h6>
-        <h6 class="mb-1">2nd place at i4 design competition <span style="color:grey">($15,500 award)</span></h6>
-        <h6 class="mb-1">Franklin L. Bost Fellow <span style="color:grey">(Graduate funded fellowship)</span></h6>
-        <h6 class="mb-1">Goodnight Scholar <span style="color:grey">(Undergraduate full-ride scholarship)</span></h6>
-        <h6 class="mb-1">Graduated summa cum laude <span style="color:grey">(BS BME NC State)</span></h6>
+        <h6 class="mb-2">Led 2 cleared 510(k) submissions <span style="color:grey">(Significant contributions to 4)</span></h6>
+        <h6 class="mb-2">2nd place at i4 design competition <span style="color:grey">($15,500 award)</span></h6>
+        <h6 class="mb-2">Franklin L. Bost Fellow <span style="color:grey">(Graduate funded fellowship)</span></h6>
+        <h6 class="mb-2">Goodnight Scholar <span style="color:grey">(Undergraduate full-ride scholarship)</span></h6>
+        <h6 class="mb-2">Graduated summa cum laude <span style="color:grey">(BS BME NC State)</span></h6>
         <h6 class="mb-0"><a href="https://www.tableau.com/" target="blank" style="color:#253a66">Tableau</a> has called my designs "sexy"</h6>
       </div>
-</section>
-
-<section class="containernarrow">
-  <div class="row col mb-6 justify-content-left mt-3">
-  <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-outline-primary">
-      <span>View Resume</span>
-    </a>
-  </div>
+    </div>
 </section>
 
 
     <section class="containernarrow px-2">
-        <div class="row mb-4" data-aos="fade-up" data-aos-delay="NaN">
+        <div class="row mb-2">
           <div class="col-12">
             <h2>Hobbies, Interests, and Loves</h2>
           </div>
         </div>
         <div class="row mb-3">
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6" >
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/running.jpeg" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">Running</h5>
               <span>10k trail is fav</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/hiking.jpeg" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">Hiking</h5>
               <span>Crazier = better</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/photography.jpeg" alt="Andrew Price" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">Photography</h5>
               <span>#behindthecamera</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/subaru.png" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">Subarus</h5>
               <span>The REI of cars</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/woodworking.jpeg" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">Woodworking</h5>
               <span>DIY is FUN</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/print.jpeg" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">3D Printing</h5>
               <span>Own: Form 2, Cube 3</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/taterTot.jpeg" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">My cats</h5>
               <span>Tater and Tot</span>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-6" data-aos="fade-up" data-aos-delay="NaN">
-            <div class="card card-lg card-body align-items-center">
-              <span class="badge badge-primary badge-top">The Real MVP</span>
+          <div class="col-xl-3 col-lg-4 col-6">
+            <div class="card card-lg card-body align-items-center shadow">
               <img src="assets/img/brinnae.jpeg" class="avatar avatar-xlg mb-3">
               <h5 class="mb-0">My amazing wife</h5>
               <span>Brinnae | @runsdata</span>
