--- a/mindfulrunning.html
+++ b/mindfulrunning.html
@@ -167,7 +167,7 @@
                 Over the course of four months, the team and I built the Focus Pack platform. We integrated the Focus Pack into Strava, the leader in social fitness with over 48 million users. Strava is an expert at the data, but they do not currently have a mindful solution, which is why we thought they were a perfect fit for our mindful running solution.
               </p>
               <p class="main" style="font-style:italic">
-                You can read more about the Focus Pack that we developed <span> <a href="https://www.ryanbolick.com/focuspack" target="_blank">here</a></span>.
+                Read more about the Focus Pack <span> <a href="https://www.ryanbolick.com/focuspack" target="_blank">here</a></span>.
               </p>
 
               <h4>Case study: Pre-mindful running</h4>
@@ -198,7 +198,9 @@
                 As I built the Focus Pack I tried the prototypes and took in the principles of mindfulness that are manifested in the Mindful Goals feature. I thought my fitness would stabilize or with some luck improve slightly, but I was not prepared for what actually happened.
               </p>
               <figure>
-                <img src="assets/img/GIF-mindfulGoals.gif" alt="Image" class="rounded" style="max-height:50vh">
+                <video class="col-6 centerVideo" autoplay loop muted playsinline>
+                  <source src="assets/video/strava_mindfulGoals.mp4">
+                </video>
                 <figcaption>Mindful Goals: A new feature in the Focus Pack</figcaption>
               </figure>
               <p class="main">
@@ -225,7 +227,7 @@
                 Originally a skeptic, working on this project and integrating it into my own running during this case study has allowed me to become a more mindful, and thus, better runner. Originally someone who could barely run a 3 mile training run, I am now feeling so good I may train for a marathon! I encourage everyone to try out mindful running.
               </p>
               <p class="main">
-                I would like to give a shout out to my team of MBA and MS Engineering colleagues at North Carolina State University. I would like to thank Strava for giving us the ideal platform to develop the Focus Pack on. For more details on the Focus Pack, check out our blog <span> <a href="https://www.ryanbolick.com/focuspack" target="_blank">here</a></span>. Join the awesome Strava community <span> <a href="https://www.strava.com/" target="_blank">here</a></span>.
+                I would like to give a shout out to my team of MBA and MS Engineering colleagues at North Carolina State University. I would like to thank Strava for giving us the ideal platform to develop the Focus Pack on. Click <span> <a href="focuspack" target="_blank">here</a></span> for more details on the Focus Pack. Join the awesome Strava community <span> <a href="https://www.strava.com/" target="_blank">here</a></span>.
               </p>
 
             </article>
