--- a/nutrics.html
+++ b/nutrics.html
@@ -145,24 +145,39 @@
     <!-- <div class="card card-body justify-content-between bg-white"> -->
         <div class="row px-2 pt-5">
             <div class="hi2" style="line-height:1">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
-            <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
+
+
+            <div class="container mt-5 mb-4">
+            <div class="row justify-content-center">
+              <div class="col-12">
+                <h2></h2>
+                <div class="rounded o-hidden">
+                  <div class="plyr" data-plyr-provider="youtube" data-plyr-embed-id="y-b2oSvBez8" href="https://youtu.be/y-b2oSvBez8"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+            <!-- <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> and <span style="color:#12895d">presentation</span> of my thesis below.</h5> -->
             <h5 class="pt-1"><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence. It suggests meals you'll love - not menus.</h5>
             <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. I created the visual design, built live mockups in Adobe XD for user testing, and contributed to the feature engineering process which informs the predictive models.</h5>
-            <h5 class="pt-1"><span class="low">This demo demonstrates the UI, look for the full version on your app store soon!</h5>
+            <h5 class="pt-1"><span class="low">The following interactive demo shows the UI, look for the full version on your app store soon!</h5>
 
         </div>
 
-          <div class="row pt-2 pl-2 col-auto">
-            <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>This page is optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
+          <div class="row mt-5 pl-2 col-auto justify-content-center">
+            <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Interactive demo is optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
             </div>
 
-            <div class="row pt-1 pl-2 col-auto">
-              <a href="nutricsMobile" class="btn btn-light" style="color:#495057"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733; border-color:green"></i>Try it for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
+            <div class="row pt-1 pl-2 col-auto justify-content-center">
+              <a href="nutricsMobile" class="btn btn-outline-primary" >Try it for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
             </div>
 
 
 
-            <div class="device device-iphone-x mx-auto mt-5" style="transform:scale(.85);">
+            <div class="device device-iphone-x mx-auto mt-1" style="transform:scale(.85);">
                         <div class="device-frame">
                           <iframe class="device-content" width="375" height="812" mx-auto src="https://xd.adobe.com/embed/c744a994-3e6c-44b6-5d66-c5fecdb4b5f4-b175/?fullscreen" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -183,12 +198,18 @@
         </div>
 
 
-
-
-
-
-
-    </section>
+    <!-- <section>
+        <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <h2></h2>
+            <div class="rounded o-hidden">
+              <div class="plyr" data-plyr-provider="youtube" data-plyr-embed-id="y-b2oSvBez8" href="https://youtu.be/y-b2oSvBez8"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
 
 
 
