--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -150,27 +150,39 @@
 
           <div class="row px-2">
               <div class="hi2" style="line-height:1">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
-              <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
+              <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> and <span style="color:#12895d">presentation</span>  of my thesis below.</h5>
           </div>
 
-          <div class="row pl-2 col-auto">
-            <a class="btn mr-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733"></i>This page is optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
-
-          </div>
-
-          <div class="row pt-1 pl-2 col-auto">
-            <a href="nutrics" class="btn btn-lightG" style="color:#495057"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try it for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></a>
-          </div>
+          <div class="row mt-1 col-auto justify-content-center">
+            <a class="btn"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733"></i>This page is optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
           </div>
 
+          <div class="row pt-1 pl-2 col-auto justify-content-center">
+            <a href="nutrics" class="btn btn-outline-primary">Try it for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></a>
+          </div>
 
-        <div class="mx-auto my-0 device-iphone-x text-left mt-5" style="transform:scale(.85)">
+          </div>
+
+
+        <div class="mx-auto my-0 device-iphone-x text-left" style="transform:scale(.85)">
           <iframe class="device-content" width="375" height="812" src="https://xd.adobe.com/embed/db079dfe-9ec3-426c-5dd6-7855879b993f-ad36/" frameborder="0"style="box-shadow: 0px 0px 10px grey;"></iframe>
         </div>
 
 
-        <div class="row px-2 mt-2">
+            <div class="container mb-5">
+            <div class="row justify-content-center">
+              <div class="col-12">
+                <h2></h2>
+                <div class="rounded o-hidden">
+                  <div class="plyr" data-plyr-provider="youtube" data-plyr-embed-id="y-b2oSvBez8" href="https://youtu.be/y-b2oSvBez8"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        <div class="row px-2 mt-4">
             <h5><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence. It suggests meals you'll love - not menus.</h5>
             <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. I created the visual design, built live mockups in Adobe XD for user testing, and contributed to the feature engineering process which informs the predictive models.</h5>
             <h5 class="pt-1"><span class="low">This demo demonstrates the UI, look for the full version on your app store soon!</h5>
