--- a/about.html
+++ b/about.html
@@ -13,10 +13,18 @@
         gtag('config', 'UA-151774559-1');
       </script>
 
+      <!-- MS Clarity -->
+      <script type="text/javascript">
+          (function(c,l,a,r,i,t,y){
+              c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+              t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+              y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+          })(window, document, "clarity", "script", "5fnzwvsax8");
+      </script>
 
     <meta charset="utf-8">
     <title>About Me</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn More About Ryan Bolick">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
@@ -213,7 +221,7 @@
 
 
 <section class="containernarrow px-2">
-      <div class="row col-6 mb-1">
+      <div class="row col-12 mb-1">
           <h2 class="mr-3">Experience</h2>
           <div >
           <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-outline-primary">
