--- a/focuspack.html
+++ b/focuspack.html
@@ -12,6 +12,16 @@
       gtag('config', 'UA-151774559-1');
     </script>
 
+
+    <!-- MS Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "5fnzwvsax8");
+    </script>
+
     <meta charset="utf-8">
     <title>Strava Focus Pack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
