--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       gtag('config', 'UA-151774559-1');
     </script>
 
+    <!-- MS Clarity -->
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
