--- a/nutrics.html
+++ b/nutrics.html
@@ -12,11 +12,18 @@
       gtag('config', 'UA-151774559-1');
     </script>
 
-
+    <!-- MS Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "5fnzwvsax8");
+    </script>
 
     <meta charset="utf-8">
     <title>Nutrics</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
     <meta name="description" content="AI Powered Meal Suggestions">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme-event.css" rel="stylesheet" type="text/css" media="all" />
