--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <meta charset="utf-8">
     <title>About Me</title>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width">
     <meta name="description" content="Learn More About Ryan Bolick">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
