--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -23,7 +23,7 @@
 
     <meta charset="utf-8">
     <title>Nutrics</title>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width">
     <meta name="description" content="AI Powered Meal Suggestions">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme-event.css" rel="stylesheet" type="text/css" media="all" />
